# hal-example

./: .gitignore  CHANGELOG.md  LICENSE  README.md  depoy.tf  hal-example.cabal  run.sh
.circleci/: config.yml
app/: Main.hs
src/App/: Handler.hs  LambdaMessage.hs
src/App/Env/: AppEnv.hs  Options.hs
