cabal-version: 2.4

name:                   hal-example
version:                0.1.0.0
synopsis:               Example lambda project
description:            Example lambda project.
homepage:               https://github.com/haskell-works/hal-example
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              John Ky
category:               Services
extra-source-files:     CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hal-example

common base                     { build-depends: base                     >= 4.7        && < 5      }

common aeson                    { build-depends: aeson                    >= 1.4.4.0    && < 1.5    }
common amazonka                 { build-depends: amazonka                 >= 1.6.1      && < 1.7    }
common amazonka-core            { build-depends: amazonka-core            >= 1.6.1      && < 1.7    }
common amazonka-s3              { build-depends: amazonka-s3              >= 1.6.1      && < 1.7    }
common amazonka-sqs             { build-depends: amazonka-sqs             >= 1.6.1      && < 1.7    }
common antiope-core             { build-depends: antiope-core             >= 7.4.5      && < 7.5    }
common antiope-messages         { build-depends: antiope-messages         >= 7.4.5      && < 7.5    }
common antiope-s3               { build-depends: antiope-s3               >= 7.4.5      && < 7.5    }
common antiope-sqs              { build-depends: antiope-sqs              >= 7.4.5      && < 7.5    }
common arbor-monad-logger       { build-depends: arbor-monad-logger       >= 0.1.1.3    && < 0.2    }
common bytestring               { build-depends: bytestring               >= 0.10.8.2   && < 0.11   }
common fast-logger              { build-depends: fast-logger              >= 2.4.16     && < 3.1    }
common generic-lens             { build-depends: generic-lens             >= 1.2.0.1    && < 2.1    }
common hal                      { build-depends: hal                      >= 0.3.0      && < 0.4    }
common lens                     { build-depends: lens                     >= 4.17.1     && < 4.19   }
common monad-logger             { build-depends: monad-logger             >= 0.3.31     && < 0.4    }
common mtl                      { build-depends: mtl                      >= 2.2.2      && < 2.3    }
common optparse-applicative     { build-depends: optparse-applicative     >= 0.14.3.0   && < 0.17   }
common resourcet                { build-depends: resourcet                >= 1.2.2      && < 1.3    }
common text                     { build-depends: text                     >= 1.2.3.1    && < 1.3    }
common unliftio                 { build-depends: unliftio                 >= 0.2.11     && < 0.3    }

common config
  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:     Haskell2010

common common-deps
  import:               base, config
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , amazonka-sqs
                      , antiope-core
                      , antiope-messages
                      , antiope-s3
                      , antiope-sqs
                      , arbor-monad-logger
                      , bytestring
                      , fast-logger
                      , generic-lens
                      , hal
                      , lens
                      , monad-logger
                      , mtl
                      , optparse-applicative
                      , resourcet
                      , text
                      , unliftio

library
  import:               common-deps
  hs-source-dirs:       src
  exposed-modules:      App.Env.AppEnv
                        App.Env.Options
                        App.LambdaMessage
                        App.Handler
                        App.Show

executable hal-example
  import:               common-deps
  hs-source-dirs:       app
  main-is:              Main.hs
  build-depends:        hal-example

test-suite hal-example-tests
  import:               common-deps
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        hal-example
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
